# HangmanCPP

./: .gitignore  CMakeLists.txt  LICENSE  Toolchain-w64-mingw32.cmake  console.cpp  console.h  hangman_frames.h  hangman_status.cpp  hangman_status.h  main.cpp  secret_word.cpp  secret_word.h  words.txt
